# animus-workflow-runner-default

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: req-052-nested-animus-probe.md
src/: agent_state.rs  config_context.rs  direct_execute.rs  ensure_execution_cwd.rs  git_provider.rs  ipc.rs  lib.rs  main.rs  payload_traversal.rs  phase_command.rs  phase_environment.rs  phase_evals.rs  phase_event_recorder.rs  phase_executor.rs  phase_failover.rs  phase_git.rs  phase_output.rs  phase_prompt.rs  phase_session.rs  plugin.rs  runtime_contract.rs  runtime_support.rs  skill_dispatch.rs  workflow_event_emitter.rs  workflow_execute.rs  workflow_session.rs
tests/: durability_idempotency_and_markers.rs  durability_manual_pending_and_failed_events.rs  notification_log.rs  phase_duration_histogram_records_observations.rs  plugin_stdio_smoke.rs  session_resume.rs
