[package]
name = "animus-workflow-runner-default"
version = "0.4.23"
edition = "2021"
description = "Reference workflow_runner plugin for Animus v0.5 (stdio JSON-RPC + direct-execute CLI; replaces in-tree workflow-runner-v2)"
license = "Elastic-2.0"
repository = "https://github.com/launchapp-dev/animus-workflow-runner-default"

[lib]
name = "animus_workflow_runner_default"
path = "src/lib.rs"

[[bin]]
name = "animus-workflow-runner-default"
path = "src/main.rs"

[dependencies]
# --- protocol crates — pinned to animus-protocol tag v0.7.0-rc.5, the SAME tag
# ao-cli release/0.7 (rc.6, rev 48ad8507) resolves ALL its protocol/wire crates
# to. Keeping every protocol crate on the single v0.7.0-rc.5 tag avoids
# duplicate-crate / type-mismatch errors with orchestrator-core's transitive
# deps (the tag-unification hazard). Bumped from v0.1.25 in lockstep with the
# orchestrator-* rev below so the runner's vendored plugin discovery understands
# the multi-kind `plugin_kinds` manifest field (config_source served by the
# consolidated animus-postgres BaaS plugin). ---------------------------------
animus-session-backend      = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.5" }
animus-subject-protocol     = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.5" }
animus-workflow-runner-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.5" }
animus-plugin-protocol      = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.5" }
animus-actor                = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.5" }
protocol                    = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.5", package = "protocol" }

# --- ao-cli kernel crates — pinned to the current HEAD rev. The session
# dispatch types (`SessionBackendResolver`, `PluginSessionBackend`,
# `SessionEvent`) must be byte-identical to the kernel's `animus agent run`
# path, which is the proven-working reference. `orchestrator-core`,
# `orchestrator-config`, `orchestrator-plugin-host`, and `orchestrator-logging`
# are in-tree path deps inside the kernel workspace, so they have no standalone
# published tag — pin them to the kernel git rev instead. ---------------------
orchestrator-core          = { git = "https://github.com/launchapp-dev/animus-cli", rev = "48ad850761247e8df368e818f6ee66fc086ab57b" }
orchestrator-config        = { git = "https://github.com/launchapp-dev/animus-cli", rev = "48ad850761247e8df368e818f6ee66fc086ab57b" }
orchestrator-plugin-host   = { git = "https://github.com/launchapp-dev/animus-cli", rev = "48ad850761247e8df368e818f6ee66fc086ab57b" }
orchestrator-logging       = { git = "https://github.com/launchapp-dev/animus-cli", rev = "48ad850761247e8df368e818f6ee66fc086ab57b" }

# --- stdlib-ish deps (move with the crate) ----------------------------------
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
jsonschema = "0.45"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "time", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"

# v0.5 lift: mirror the relevant relaxations from ao-cli's workspace lints
# so the (byte-identical) lifted modules clear `clippy -- -D warnings`. As
# the standalone package matures these allowances can be tightened
# function-by-function.
[lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[lints.clippy]
too_many_arguments = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
wildcard_imports = "allow"
