[package]
name = "animus-workflow-runner-default"
version = "0.4.44"
edition = "2021"
description = "Reference workflow_runner plugin for Animus v0.5 (stdio JSON-RPC + direct-execute CLI; replaces in-tree workflow-runner-v2)"
license = "Elastic-2.0"
repository = "https://github.com/launchapp-dev/animus-workflow-runner-default"

[lib]
name = "animus_workflow_runner_default"
path = "src/lib.rs"

[[bin]]
name = "animus-workflow-runner-default"
path = "src/main.rs"

[dependencies]
# --- protocol crates — pinned to animus-protocol tag v0.7.0-rc.6, the SAME tag
# ao-cli release/0.7 (rc.6, rev 48ad8507) resolves ALL its protocol/wire crates
# to. Keeping every protocol crate on the single v0.7.0-rc.6 tag avoids
# duplicate-crate / type-mismatch errors with orchestrator-core's transitive
# deps (the tag-unification hazard). Bumped from v0.1.25 in lockstep with the
# orchestrator-* rev below so the runner's vendored plugin discovery understands
# the multi-kind `plugin_kinds` manifest field (config_source served by the
# consolidated animus-postgres BaaS plugin). ---------------------------------
animus-session-backend      = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.6" }
animus-subject-protocol     = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.6" }
animus-workflow-runner-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.6" }
animus-plugin-protocol      = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.6" }
animus-actor                = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.6" }
protocol                    = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.6", package = "protocol" }
# REQUIREMENT-048 Phase B: native workflow-phase environment routing. The
# environment wire types (EnvironmentSpec / HarnessCommand / RepoRef /
# ExecResponse / ExecStream / EnvironmentHandle) live in this crate, pinned to
# the SAME v0.7.0-rc.6 tag as every other protocol crate above (tag-unification
# hazard — see the note at the top of this block).
animus-environment-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.6" }

# --- ao-cli kernel crates — pinned to the current HEAD rev. The session
# dispatch types (`SessionBackendResolver`, `PluginSessionBackend`,
# `SessionEvent`) must be byte-identical to the kernel's `animus agent run`
# path, which is the proven-working reference. `orchestrator-core`,
# `orchestrator-config`, `orchestrator-plugin-host`, and `orchestrator-logging`
# are in-tree path deps inside the kernel workspace, so they have no standalone
# published tag — pin them to the kernel git rev instead. ---------------------
orchestrator-core          = { git = "https://github.com/launchapp-dev/animus-cli", rev = "d03cd174592370b48b22c1b368fa509e10dd1ce5" }
orchestrator-config        = { git = "https://github.com/launchapp-dev/animus-cli", rev = "d03cd174592370b48b22c1b368fa509e10dd1ce5" }
orchestrator-plugin-host   = { git = "https://github.com/launchapp-dev/animus-cli", rev = "d03cd174592370b48b22c1b368fa509e10dd1ce5" }
orchestrator-logging       = { git = "https://github.com/launchapp-dev/animus-cli", rev = "d03cd174592370b48b22c1b368fa509e10dd1ce5" }
# rc.9 (#318/TASK-276): the task-status projection now writes through a
# `TaskProjectionStore`. `resolve_task_projection_store` selects the subject
# router when a `subject_backend` plugin owns `task`/`*` (portal) and falls back
# to the in-tree hub store otherwise — the runner reuses the daemon's exact
# builder so its own in-process projections route through the plugin instead of
# the empty in-tree store (else finished/paused runs leave the subject stuck).
orchestrator-daemon-runtime = { git = "https://github.com/launchapp-dev/animus-cli", rev = "d03cd174592370b48b22c1b368fa509e10dd1ce5" }
# REQUIREMENT-048 Phase B: `inject_codex_config_overrides_list` (codex
# reasoning-effort override on the env-exec argv) is provided by this ao-cli
# workspace crate; pinned to the SAME kernel rev as the orchestrator-* crates
# above so the shared runtime-contract types stay byte-identical.
animus-runtime-shared      = { git = "https://github.com/launchapp-dev/animus-cli", rev = "d03cd174592370b48b22c1b368fa509e10dd1ce5" }

# --- stdlib-ish deps (move with the crate) ----------------------------------
anyhow = "1.0"
async-trait = "0.1"
# REQUIREMENT-048 cross-phase environment broker (runner client). The daemon
# owns ONE environment node per workflow RUN and exposes it over a private local
# socket; when the broker env vars are set the runner dials that socket (newline
# JSON, one connection per RPC) instead of preparing its own per-phase node.
# Same `interprocess` local-socket idiom as the reattach back-channel.
interprocess = "2.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
jsonschema = "0.45"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "time", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
# REQUIREMENT-048 Phase B tests: the config-routing gate tests inject a
# synthetic base WorkflowConfig via the v0.6 `config_source` test seam
# (`config_source_client::install_yaml_config_source_base`), which is gated
# behind orchestrator-config's `test-utils` feature. Same kernel rev as the
# normal dep above so cargo unifies them (this only turns on the extra feature
# in test builds).
orchestrator-config = { git = "https://github.com/launchapp-dev/animus-cli", rev = "d03cd174592370b48b22c1b368fa509e10dd1ce5", features = ["test-utils"] }
# The env-var gate tests use `protocol::test_utils::EnvVarGuard`, gated behind
# the protocol crate's `test-utils` feature. Same tag as the normal `protocol`
# dep above so cargo just turns the extra feature on in test builds.
protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.7.0-rc.6", package = "protocol", features = ["test-utils"] }

# v0.5 lift: mirror the relevant relaxations from ao-cli's workspace lints
# so the (byte-identical) lifted modules clear `clippy -- -D warnings`. As
# the standalone package matures these allowances can be tightened
# function-by-function.
[lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[lints.clippy]
too_many_arguments = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
wildcard_imports = "allow"
